fix: Исправлены баги после аттестации

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -19,7 +19,7 @@
     }
 
     &:focus {
-      outline: 3px solid rgba(0, 114, 255, 0.4);
+      outline: 3px solid rgb(0 114 255 / 40%);
     }
 
     &:active {
